--- a/views/index.liquid
+++ b/views/index.liquid
@@ -1,5 +1,7 @@
 {% render 'partials/head.liquid' %}
 
+<main>
+
 {% comment %} Welkom bij div galore 😂 {% endcomment %}
 
 {% comment %} Crossfade voor startup {% endcomment %}
@@ -333,5 +335,6 @@
   <p>Hoi! 🙂</p>
 </div>
 
+</main>
 
 {% render 'partials/foot.liquid' %}
