Bio uit de server halen

--- a/views/index.liquid
+++ b/views/index.liquid
@@ -184,7 +184,7 @@
       <div class="overlay-content">
         <p>{{ person.name }}</p>
         <div class="aboutme">
-          <p>Mijn naam is Tom, ik ben 20 jaar en ik woon in Heemskerk. Ik vind het leuk om te gamen en om met vrienden af te spreken. <br><br>Als vooropleiding deed ik Software Development op het Talland College in Zaandam, het designen van websites vond ik zelf altijd het leukste van ICT, vandaar dat ik voor Front-end Design heb gekozen.</p>
+          <p>{{ person.bio }}</p>
           <img alt="Tom's Profielfoto" src="20250427_145611.jpg">
         </div>
       </div>
